objects/Permission_Set_Group_Testing_Result__mdt.object
<CustomObject>
    <fields>
        <fullName>Expected_Exception_Match__c</fullName>
        <label>Expected Exception Match</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Log_Message__c</fullName>
        <label>Failure Log Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Group__c</fullName>
        <label>Permission Set Group</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Class_Method_Name__c</fullName>
        <label>Test Class Method Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Permission Set Group Testing Result</label>
    <pluralLabel>Permission Set Group Testing Results</pluralLabel>
</CustomObject>